--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
+
+
+* {
+  font-family: 'Bangers', cursive;
+}
 
 @custom-variant dark (&:is(.dark *));
 :root {
